application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  #namespace: science
  labels:
    app: helloworld
    service: helloworld
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
